# pdfer

./: .dockerignore  .editorconfig  .env  Cargo.toml  Makefile  docker-compose.yml  rustfmt.toml
local/app/: Dockerfile
local/db/: Dockerfile
src/: config.rs  main.rs
src/infrastructure/: s3.rs
