[package]
name = "pdfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
sqlx = "0.5.13"

# aws-sdk-rust 使ってみるぞ
aws-config = "0.12.0"
aws-sdk-dynamodb = "0.12.0"
tokio = { version = "1", features = ["full"] }

# rusoto はこれ
# rusoto_core = "0.48.0"
# rusoto_s3 = "0.48.0"
