[package]
name = "pdfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "bigdecimal"] }
bigdecimal = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

# aws-sdk-rust 使ってみるぞ
aws-config = "0.12.0"
aws-sdk-dynamodb = "0.12.0"
tokio = { version = "1", features = ["full"] }

# rusoto はこれ
# rusoto_core = "0.48.0"
# rusoto_s3 = "0.48.0"
